--- a/public/index.html
+++ b/public/index.html
@@ -631,14 +631,74 @@ async function refreshStatuses(){
 })();
 
 
-  const WORKER_API = "https://kixonair-espn-proxy.youmovies-cc.workers.dev/";
-
-  function ymd(ts) {
+  // === fetch ESPN via your existing Worker (proxy mode) ===
+  const WORKER_PROXY = "https://kixonair-espn-proxy.youmovies-cc.workers.dev/?url=";
+  const ESPN_SEGMENTS = [
+    "soccer/eng.1",
+    "soccer/esp.1",
+    "soccer/ita.1",
+    "soccer/ger.1",
+    "soccer/fra.1",
+    "soccer/uefa.champions",
+    "soccer",
+    "basketball/nba",
+    "football/nfl",
+    "hockey/nhl"
+  ];
+  const ESPN_META = {
+    "soccer/eng.1": { sport: "Soccer", name: "Premier League", code: "PL" },
+    "soccer/esp.1": { sport: "Soccer", name: "La Liga", code: "LL" },
+    "soccer/ita.1": { sport: "Soccer", name: "Serie A", code: "SA" },
+    "soccer/ger.1": { sport: "Soccer", name: "Bundesliga", code: "BL1" },
+    "soccer/fra.1": { sport: "Soccer", name: "Ligue 1", code: "L1" },
+    "soccer/uefa.champions": { sport: "Soccer", name: "UEFA Champions League", code: "UCL" },
+    "soccer": { sport: "Soccer", name: "Football", code: "" },
+    "basketball/nba": { sport: "NBA", name: "NBA", code: "NBA" },
+    "football/nfl": { sport: "NFL", name: "NFL", code: "NFL" },
+    "hockey/nhl": { sport: "NHL", name: "NHL", code: "NHL" }
+  };
+  function toYMD(ts) {
     const d = new Date(ts);
     d.setMinutes(d.getMinutes() - d.getTimezoneOffset());
-    return d.toISOString().slice(0, 10);
+    return d.toISOString().slice(0,10);
   }
-
+  async function fetchViaWorker(segment, dateStr) {
+    const espnUrl = "https://site.api.espn.com/apis/site/v2/sports/" + segment + "/scoreboard?dates=" + dateStr;
+    const url = WORKER_PROXY + encodeURIComponent(espnUrl);
+    const r = await fetch(url);
+    if (!r.ok) return {events:[]};
+    return r.json();
+  }
+  function mapEspn(data, segment) {
+    const meta = ESPN_META[segment] || { sport: "Soccer", name: "Football", code: "" };
+    const out = [];
+    (data.events || []).forEach(ev => {
+      const iso = ev.date;
+      if (!iso) return;
+      const comp = (ev.competitions && ev.competitions[0]) || {};
+      const teams = comp.competitors || [];
+      const home = teams.find(t => t.homeAway === "home") || teams[0] || {};
+      const away = teams.find(t => t.homeAway === "away") || teams[1] || {};
+      out.push({
+        sport: meta.sport,
+        league: {
+          name: (comp.league && comp.league.name) || meta.name,
+          code: (comp.league && comp.league.abbreviation) || meta.code || ""
+        },
+        start_utc: iso,
+        status: (comp.status && comp.status.type && comp.status.type.name) || "STATUS_SCHEDULED",
+        home: {
+          name: (home.team && (home.team.shortDisplayName || home.team.displayName || home.team.name)) || "",
+          logo: (home.team && (home.team.logo || (home.team.logos && home.team.logos[0] && home.team.logos[0].href))) || ""
+        },
+        away: {
+          name: (away.team && (away.team.shortDisplayName || away.team.displayName || away.team.name)) || "",
+          logo: (away.team && (away.team.logo || (away.team.logos && away.team.logos[0] && away.team.logos[0].href))) || ""
+        }
+      });
+    });
+    return out;
+  }
   async function loadUpcoming() {
     ['football','nba','nfl','nhl'].forEach(function(id){
       const el = document.getElementById(id);
@@ -647,19 +707,19 @@ async function refreshStatuses(){
     });
     try {
       const now = Date.now();
-      const todayStr = ymd(now);
-      const tomorrowStr = ymd(now + 86400000);
-
-      const [todayData, tomorrowData] = await Promise.all([
-        fetch(WORKER_API + "?fixtures=1&date=" + todayStr).then(r=>r.json()).catch(()=>{return {fixtures:[]}}),
-        fetch(WORKER_API + "?fixtures=1&date=" + tomorrowStr).then(r=>r.json()).catch(()=>{return {fixtures:[]}})
-      ]);
-
+      const today = toYMD(now);
+      const tomorrow = toYMD(now + 86400000);
+      const dates = [today, tomorrow];
       let combined = [];
-      if (todayData && todayData.fixtures) combined = combined.concat(todayData.fixtures);
-      if (tomorrowData && tomorrowData.fixtures) combined = combined.concat(tomorrowData.fixtures);
-
-      // keep next 48h (+ small past window)
+      // for each date, fetch all segments
+      for (const d of dates) {
+        const jobs = ESPN_SEGMENTS.map(seg =>
+          fetchViaWorker(seg, d).then(data => mapEspn(data, seg)).catch(() => [])
+        );
+        const all = await Promise.all(jobs);
+        combined = combined.concat(...all);
+      }
+      // filter to next 48h + small past window
       const H48 = 48*60*60*1000;
       const past = 6*60*60*1000;
       combined = combined.filter(fx => {
@@ -668,25 +728,24 @@ async function refreshStatuses(){
         const diff = ts - now;
         return diff < H48 && diff > -past;
       });
-
+      // sort
+      combined.sort((a,b) => {
+        if (!a.start_utc) return 1;
+        if (!b.start_utc) return -1;
+        return a.start_utc.localeCompare(b.start_utc);
+      });
       ALL = combined;
       renderLists();
-      const footballCount = combined.filter(fx => fx.sport === 'Soccer').length;
-      const nbaCount = combined.filter(fx => fx.sport === 'NBA').length;
-      const nflCount = combined.filter(fx => fx.sport === 'NFL').length;
-      const nhlCount = combined.filter(fx => fx.sport === 'NHL').length;
       document.getElementById('counts').textContent =
-        'Loaded ' + footballCount + ' Football, ' + nbaCount + ' NBA, ' + nflCount + ' NFL, ' + nhlCount + ' NHL (via your worker)';
-    } catch(e) {
-      document.getElementById('counts').textContent = 'Could not load games from worker.';
-      ['football','nba','nfl','nhl'].forEach(function(id) {
+        'Loaded ' + combined.length + ' fixtures via your worker proxy.';
+    } catch (e) {
+      document.getElementById('counts').textContent = 'Could not load via worker proxy.';
+      ['football','nba','nfl','nhl'].forEach(id => {
         const el = document.getElementById(id);
         el.innerHTML = '<div class="empty">No games.</div>';
       });
     }
   }
-
-  // auto load
   loadUpcoming();
   setInterval(loadUpcoming, 15*60*1000);
 
