--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
 
   // your Hostinger endpoint
   const API_BASE = "https://fotbal.site/fixtures.php?date=";
-  const WATCH_URL = ""/watch.html"";
+  const WATCH_URL = "/watch.html";
   const OPEN_IN_NEW_TAB = true;
 
   const fmtTime = d => new Date(d).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit', hour12: false });
