--- a/public/watch.html
+++ b/public/watch.html
@@ -3,8 +3,8 @@
 <head>
   <script>
     (function () {
-      // add fotbal.site so it won't redirect away
-      var ok = ['kixonair.com', 'www.kixonair.com', 'fotbal.site', 'www.fotbal.site', '', 'localhost', '127.0.0.1'];
+      // Permit local development hosts in addition to the production domains.
+      var ok = ['kixonair.com', 'www.kixonair.com', '', 'localhost', '127.0.0.1'];
       try {
         if (!ok.includes(location.hostname)) location.replace('https://kixonair.com');
       } catch (e) {}
@@ -17,17 +17,27 @@
   <link rel="stylesheet" href="/styles.css?v=34" />
   <link rel="icon" href="/logo.svg" type="image/svg+xml" />
   <style>
+    /*
+     * Premium match centre styling
+     *
+     * The original layout has been preserved but colours, spacing,
+     * typography and components are upgraded for a more upscale look.
+     */
     :root{
+      /* base spacing */
       --pad: clamp(12px, 3vw, 22px);
-      --primary-bg: #0f172a;
-      --secondary-bg: #1e293b;
-      --border-col: #334155;
-      --accent: #6366f1;
-      --accent-hover: #7c3aed;
-      --text-col: #f1f5f9;
-      --muted-col: #94a3b8;
-      --success-col: #10b981;
+      /* colour palette */
+      --primary-bg: #0f172a;        /* darkest panel background */
+      --secondary-bg: #1e293b;      /* card background */
+      --border-col: #334155;        /* soft border colour */
+      --accent: #6366f1;            /* violet accent for buttons */
+      --accent-hover: #7c3aed;      /* deeper violet for hover */
+      --text-col: #f1f5f9;          /* near white for text */
+      --muted-col: #94a3b8;         /* muted grey for secondary text */
+      --success-col: #10b981;       /* green for loading indicator */
     }
+
+    /* global resets and typography */
     html, body{
       margin:0; padding:0;
       background: radial-gradient(circle at top left, var(--primary-bg), var(--secondary-bg));
@@ -35,12 +45,16 @@
       font-family: 'Segoe UI', Tahoma, sans-serif;
       line-height: 1.5;
     }
+
     a{ color: inherit; }
+
     .wrap{
       max-width:980px;
       margin:0 auto;
       padding:var(--pad);
     }
+
+    /* header bar */
     .headerbar{
       display:grid;
       grid-template-columns:auto 1fr auto;
@@ -49,6 +63,8 @@
       color: var(--text-col);
     }
     .headerbar .center{justify-self:center;}
+
+    /* competition badge */
     .badge{
       display:inline-block;
       border:1px solid var(--border-col);
@@ -62,6 +78,8 @@
       overflow:hidden;
       text-overflow:ellipsis;
     }
+
+    /* teams grid */
     .teams{
       display:grid;
       grid-template-columns:1fr auto 1fr;
@@ -93,6 +111,9 @@
       font-weight:600;
       line-height:1.3;
       color: var(--text-col);
+      /* Allow long team names to wrap on small screens instead of truncating.
+         Removing the truncation styles lets the browser break names onto multiple lines
+         so they remain readable on phone‑sized viewports. */
       white-space: normal;
       overflow-wrap: anywhere;
       max-width:100%;
@@ -115,6 +136,8 @@
       font-weight:500;
       color: var(--accent);
     }
+
+    /* meta information grid */
     .meta{
       display:grid;
       grid-template-columns:repeat(3,minmax(0,1fr));
@@ -127,6 +150,8 @@
       box-shadow:0 4px 8px rgba(0,0,0,0.3);
     }
     @media(max-width:720px){ .meta{grid-template-columns:repeat(2,minmax(0,1fr));} }
+
+    /* server bar */
     .serverbar{
       display:flex;
       flex-wrap:wrap;
@@ -156,6 +181,8 @@
       background: linear-gradient(135deg, var(--accent-hover) 0%, var(--accent) 100%);
       transform: translateY(-2px);
     }
+
+    /* loading overlay */
     .loading{
       position:fixed;
       inset:0;
@@ -199,7 +226,11 @@
     }
     @keyframes spin{ to{ transform:rotate(360deg) } }
     @keyframes pulse{ 0%,100%{ transform:translate(-50%,-50%) scale(.85); opacity:.85 } 50%{ transform:translate(-50%,-50%) scale(1.1); opacity:1 } }
+
+    /* hide league badge on small screens */
     @media(max-width:600px){ #leagueBadge{ display:none; } }
+
+    /* back button styling */
     .btn{
       display:inline-block;
       padding:8px 14px;
@@ -215,6 +246,8 @@
       background: var(--accent);
       color:#ffffff;
     }
+
+    /* header */
     header.header{
       background: var(--secondary-bg);
       border-bottom:1px solid var(--border-col);
@@ -265,9 +298,9 @@
 </main>
 
 <script>
-  // ======== CONFIG (kept) ========
+  // ======== CONFIG ========
   const API_KEY = 'kix-7d29f2d9ef3c4';
-  const API_BASE = './api'; // we leave it here, but we'll pull fixtures from fotbal.site now
+  const API_BASE = './api';
 
   function apiFetch(url, init = {}) {
     const u = new URL(url, location.href);
@@ -280,28 +313,92 @@
     return fetch(u.toString(), Object.assign({ credentials: 'include' }, init, { headers }));
   }
 
-  // ======== helpers (from your original) ========
+  // ======== helpers ========
   let __loadFailTimer = null;
   const $ = id => document.getElementById(id);
   function hideLoading(){ try{ $('loadingOverlay').classList.add('hidden'); }catch{} if(__loadFailTimer){clearTimeout(__loadFailTimer);__loadFailTimer=null;} }
   function qs(name){ return new URLSearchParams(location.search).get(name) || ''; }
   function slug(s){ return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,''); }
-  function capWords(s){ return String(s||'').split(/[-\s]+/).map(w => w? w[0].toUpperCase()+w.slice(1):'').join(' '); }
-  function addDays(dateStr, delta){
-    const dt = new Date(Date.UTC(+dateStr.slice(0,4), +dateStr.slice(5,7)-1, +dateStr.slice(8,10)));
-    dt.setUTCDate(dt.getUTCDate()+delta);
-    return dt.toISOString().slice(0,10);
-  }
+  function capWords(s){ return String(s||'').split(/[-\\s]+/).map(w => w? w[0].toUpperCase()+w.slice(1):'').join(' '); }
+  function ymdFromIso(x){ try{ return String(x||'').slice(0,10) || null; }catch{return null;} }
+  function addDays(dateStr, delta){ const dt = new Date(Date.UTC(+dateStr.slice(0,4), +dateStr.slice(5,7)-1, +dateStr.slice(8,10))); dt.setUTCDate(dt.getUTCDate()+delta); return dt.toISOString().slice(0,10); }
 
-  // keep your status normalizer (single version)
+  /**
+   * Map various status codes coming from the fixture API into human friendly labels.
+   * The API can return statuses such as "IN_PLAY", "PAUSED", "SCHEDULED", "FINISHED",
+   * "HALF-TIME" etc. We normalise them to four distinct states:
+   *  - Scheduled: the match has not started yet
+   *  - Live: the match is currently in progress (1st or 2nd half)
+   *  - Half Time: the match is in its half‑time break
+   *  - Finished: the match has concluded
+   * If none of the above patterns are detected the original status string is returned.
+   */
   function formatStatus(status){
     const raw = String(status || '').toUpperCase();
+    // patterns representing a live match
     const livePatterns = ['IN_PLAY','LIVE','PLAYING','1ST HALF','FIRST HALF','2ND HALF','SECOND HALF'];
     for (const p of livePatterns){ if (raw.includes(p)) return 'Live'; }
+    // patterns representing half time
     const halfPatterns = ['HALF-TIME','HALFTIME','HT','HALF TIME','PAUSED'];
     for (const p of halfPatterns){ if (raw.includes(p)) return 'Half Time'; }
+    // patterns representing finished matches
     const finPatterns = ['FINISHED','FULL-TIME','FT','FINAL','ENDED'];
     for (const p of finPatterns){ if (raw.includes(p)) return 'Finished'; }
+    // scheduled / not started
+    const schedPatterns = ['SCHEDULED','NOT_STARTED','NS'];
+    for (const p of schedPatterns){ if (raw.includes(p)) return 'Scheduled'; }
+    return status || '';
+  }
+
+  /**
+   * Map various status codes coming from the fixture API into human friendly labels.
+   * The API can return statuses such as "IN_PLAY", "PAUSED", "SCHEDULED", "FINISHED",
+   * "HALF-TIME" etc. We normalise them to four distinct states:
+   *  - Scheduled: the match has not started yet
+   *  - Live: the match is currently in progress (1st or 2nd half)
+   *  - Half Time: the match is in its half‑time break
+   *  - Finished: the match has concluded
+   * If none of the above patterns are detected the original status string is returned.
+   */
+  function formatStatus(status){
+    const raw = String(status || '').toUpperCase();
+    // patterns representing a live match
+    const livePatterns = ['IN_PLAY','LIVE','PLAYING','1ST HALF','FIRST HALF','2ND HALF','SECOND HALF'];
+    for (const p of livePatterns){ if (raw.includes(p)) return 'Live'; }
+    // patterns representing half time
+    const halfPatterns = ['HALF-TIME','HALFTIME','HT','HALF TIME','PAUSED'];
+    for (const p of halfPatterns){ if (raw.includes(p)) return 'Half Time'; }
+    // patterns representing finished matches
+    const finPatterns = ['FINISHED','FULL-TIME','FT','FINAL','ENDED'];
+    for (const p of finPatterns){ if (raw.includes(p)) return 'Finished'; }
+    // scheduled / not started
+    const schedPatterns = ['SCHEDULED','NOT_STARTED','NS'];
+    for (const p of schedPatterns){ if (raw.includes(p)) return 'Scheduled'; }
+    return status || '';
+  }
+
+  /**
+   * Map various status codes coming from the fixture API into human friendly labels.
+   * The API can return statuses such as "IN_PLAY", "PAUSED", "SCHEDULED", "FINISHED",
+   * "HALF-TIME" etc.  We normalise them to four distinct states:
+   *  - Scheduled: the match has not started yet
+   *  - Live: the match is currently in progress (1st or 2nd half)
+   *  - Half Time: the match is in its half‑time break
+   *  - Finished: the match has concluded
+   * If none of the above patterns are detected the original status string is returned.
+   */
+  function formatStatus(status){
+    const raw = String(status || '').toUpperCase();
+    // Normalise live statuses
+    const livePatterns = ['IN_PLAY','LIVE','PLAYING','1ST HALF','FIRST HALF','2ND HALF','SECOND HALF'];
+    for (const p of livePatterns){ if (raw.includes(p)) return 'Live'; }
+    // Half-time patterns
+    const halfPatterns = ['HALF-TIME','HALFTIME','HT','HALF TIME','PAUSED'];
+    for (const p of halfPatterns){ if (raw.includes(p)) return 'Half Time'; }
+    // Finished patterns
+    const finPatterns = ['FINISHED','FULL-TIME','FT','FINAL','ENDED'];
+    for (const p of finPatterns){ if (raw.includes(p)) return 'Finished'; }
+    // Scheduled / not started patterns
     const schedPatterns = ['SCHEDULED','NOT_STARTED','NS'];
     for (const p of schedPatterns){ if (raw.includes(p)) return 'Scheduled'; }
     return status || '';
@@ -319,7 +416,6 @@
     renderServerButtonsFromSlug(sl);
   }
 
-  // prefill from slug in URL like before
   (function prime(){
     const id = qs('id');
     if (id && id.includes('@')){
@@ -333,75 +429,12 @@
     }
   })();
 
-  // ======== CHANGED: get fixtures from fotbal.site instead of ./api/fixtures ========
   async function fixturesFor(dateStr){
-    // your PHP endpoint
-    const url = `https://fotbal.site/fixtures.php?date=${encodeURIComponent(dateStr)}`;
-    let r;
-    try {
-      r = await fetch(url, { cache: 'no-store' });
-    } catch (e) {
-      return [];
-    }
-    if (!r.ok) return [];
-    let arr;
-    try {
-      arr = await r.json();
-    } catch (e) {
-      return [];
-    }
-    if (!Array.isArray(arr)) return [];
-
-    // normalize each item so the rest of the code can read fx.home.name etc.
-    return arr.map(x => {
-      const homeName =
-        (x.home && x.home.name) ||
-        x.home_name ||
-        x.home ||
-        x.team_home ||
-        x.localteam ||
-        '';
-      const awayName =
-        (x.away && x.away.name) ||
-        x.away_name ||
-        x.away ||
-        x.team_away ||
-        x.visitorteam ||
-        '';
-      const leagueName =
-        (x.league && x.league.name) ||
-        x.league ||
-        x.competition ||
-        x.tournament ||
-        '';
-      const startUtc =
-        x.start_utc ||
-        x.kickoff ||
-        x.date ||
-        x.time ||
-        '';
-      const status =
-        x.status ||
-        x.state ||
-        x.match_status ||
-        '';
-      const homeLogo =
-        (x.home && x.home.logo) ||
-        x.home_logo ||
-        '';
-      const awayLogo =
-        (x.away && x.away.logo) ||
-        x.away_logo ||
-        '';
-      return {
-        ...x,
-        home: { name: homeName, logo: homeLogo },
-        away: { name: awayName, logo: awayLogo },
-        league: { name: leagueName },
-        start_utc: startUtc,
-        status: status
-      };
-    });
+    const r = await apiFetch(`${API_BASE}/fixtures?date=${encodeURIComponent(dateStr)}`, { cache: 'no-store' }).catch(() => null);
+    if (!r || !r.ok) return []; // don't surface 404—some dates just have none
+    const j = await r.json().catch(() => null);
+    const list = j?.fixtures || j?.data?.fixtures || [];
+    return Array.isArray(list) ? list : [];
   }
 
   function tokens(name){
@@ -431,6 +464,7 @@
     const homeLogo = fx.home?.logo || '';
     const awayLogo = fx.away?.logo || '';
     const league   = fx.league?.name || '';
+    // raw status string provided by the API
     const statusRaw = fx.status || 'SCHEDULED';
     const kickoff  = fx.start_utc || '';
 
@@ -438,34 +472,29 @@
     $('awayName').textContent = awayName;
     $('homeLogo').src = homeLogo || '/logo.svg';
     $('awayLogo').src = awayLogo || '/logo.svg';
-    $('leagueBadge').textContent = league || '';
-    $('league').textContent = league || '-';
+    $('leagueBadge').textContent = league || ''; $('league').textContent = league || '-';
+    // derive a human friendly status from the API value
     const friendlyStatus = formatStatus(statusRaw);
     $('state').textContent = friendlyStatus || '-';
-    $('statusLine').textContent = friendlyStatus || '';
     $('kickoff').textContent = kickoff ? new Date(kickoff).toLocaleString() : '-';
+    $('statusLine').textContent = friendlyStatus || '';
 
     renderServerButtonsFromFixture(fx);
     hideLoading();
   }
 
   async function load(){
-    $('loadingOverlay').classList.remove('hidden');
+    document.getElementById('loadingOverlay').classList.remove('hidden');
     __loadFailTimer = setTimeout(hideLoading, 3500);
 
     const id  = qs('id');
     if (!id){ $('statusLine').textContent='Missing match id'; hideLoading(); return; }
 
-    // we keep your old logic: try single fixture (your old API) AND try fixtures list
     async function serverResolve(){
-      // if you no longer have /api/fixture/... this will just return null and the list lookup will handle it
       try{
         let r = await apiFetch(`${API_BASE}/fixture/${encodeURIComponent(id)}`);
         if (!r.ok) r = await apiFetch(`${API_BASE}/fixture?id=${encodeURIComponent(id)}`);
-        if (r.ok){
-          const j = await r.json().catch(()=>null);
-          return (j && (j.fixture || j.data?.fixture)) || null;
-        }
+        if (r.ok){ const j = await r.json().catch(()=>null); return (j && (j.fixture || j.data?.fixture)) || null; }
       }catch(e){}
       return null;
     }
