--- a/public/watch.html
+++ b/public/watch.html
@@ -3,8 +3,7 @@
 <head>
   <script>
     (function () {
-      // Permit local development hosts in addition to the production domains.
-      // ADDED fotbal.site so it won't redirect away from your Hostinger/Render domain
+      // allow fotbal.site so it doesn't redirect away
       var ok = ['kixonair.com', 'www.kixonair.com', 'fotbal.site', 'www.fotbal.site', '', 'localhost', '127.0.0.1'];
       try {
         if (!ok.includes(location.hostname)) location.replace('https://kixonair.com');
@@ -18,16 +17,8 @@
   <link rel="stylesheet" href="/styles.css?v=34" />
   <link rel="icon" href="/logo.svg" type="image/svg+xml" />
   <style>
-    /*
-     * Premium match centre styling
-     *
-     * The original layout has been preserved but colours, spacing,
-     * typography and components are upgraded for a more upscale look.
-     */
     :root{
-      /* base spacing */
       --pad: clamp(12px, 3vw, 22px);
-      /* colour palette */
       --primary-bg: #0f172a;
       --secondary-bg: #1e293b;
       --border-col: #334155;
@@ -36,57 +27,41 @@
       --text-col: #f1f5f9;
       --muted-col: #94a3b8;
       --success-col: #10b981;
-      --danger-col: #ef4444;
     }
-
     html, body{
-      margin:0;
-      padding:0;
+      margin:0; padding:0;
       background: radial-gradient(circle at top left, var(--primary-bg), var(--secondary-bg));
       color: var(--text-col);
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      min-height: 100vh;
       line-height: 1.5;
     }
-
     a{ color: inherit; }
-
     .wrap{
       max-width:980px;
       margin:0 auto;
       padding:var(--pad);
     }
-
-    /* top bar */
     .headerbar{
       display:grid;
-      grid-template-columns: auto 1fr auto;
+      grid-template-columns:auto 1fr auto;
       align-items:center;
       margin-bottom:16px;
       color: var(--text-col);
-      gap:12px;
     }
-    .headerbar .center{
-      justify-self:center;
-    }
-
+    .headerbar .center{justify-self:center;}
     .badge{
       display:inline-block;
       border:1px solid var(--border-col);
-      background: rgba(15,23,42,0.35);
+      background: var(--secondary-bg);
       color: var(--text-col);
       border-radius:999px;
       padding:4px 12px;
       font-size:12px;
-      text-transform:uppercase;
-      letter-spacing:.08em;
+      max-width:50vw;
       white-space:nowrap;
       overflow:hidden;
       text-overflow:ellipsis;
-      max-width:50vw;
     }
-
-    /* hero */
     .teams{
       display:grid;
       grid-template-columns:1fr auto 1fr;
@@ -94,14 +69,12 @@
       align-items:center;
       justify-items:center;
       margin:20px 0 8px;
-      background: rgba(15,23,42,0.6);
-      border:1px solid rgba(148,163,184,0.35);
+      background: var(--secondary-bg);
+      border:1px solid var(--border-col);
       border-radius:16px;
       padding:16px;
-      box-shadow:0 24px 40px rgba(0,0,0,0.22);
-      backdrop-filter: blur(6px);
+      box-shadow:0 4px 8px rgba(0,0,0,0.3);
     }
-
     .side{
       display:flex;
       flex-direction:column;
@@ -113,7 +86,7 @@
       width:clamp(64px,14vw,96px);
       height:clamp(64px,14vw,96px);
       object-fit:contain;
-      filter: drop-shadow(0 2px 8px rgba(0,0,0,0.35));
+      filter: drop-shadow(0 2px 4px rgba(0,0,0,0.4));
     }
     .teamName{
       font-size:clamp(18px,4.5vw,24px);
@@ -134,7 +107,6 @@
     .muted{
       color: var(--muted-col);
     }
-
     .statusBig{
       margin-top:8px;
       margin-bottom:6px;
@@ -143,50 +115,34 @@
       font-weight:500;
       color: var(--accent);
     }
-
-    /* meta info */
     .meta{
       display:grid;
       grid-template-columns:repeat(3,minmax(0,1fr));
       gap:12px;
       margin:20px 0;
-      background: rgba(15,23,42,0.55);
-      border:1px solid rgba(148,163,184,0.3);
+      background: var(--secondary-bg);
+      border:1px solid var(--border-col);
       border-radius:16px;
       padding:16px;
-      box-shadow:0 14px 28px rgba(0,0,0,0.16);
+      box-shadow:0 4px 8px rgba(0,0,0,0.3);
     }
-
-    .meta div{
-      min-height:48px;
-    }
-
-    .small{
-      font-size:11px;
-      text-transform:uppercase;
-      letter-spacing:.04em;
-      display:block;
-      margin-bottom:4px;
-    }
-
-    /* servers */
+    @media(max-width:720px){ .meta{grid-template-columns:repeat(2,minmax(0,1fr));} }
     .serverbar{
       display:flex;
       flex-wrap:wrap;
       gap:14px;
       justify-content:center;
       margin:18px 0 4px;
-      background: rgba(15,23,42,0.55);
-      border:1px solid rgba(148,163,184,0.3);
+      background: var(--secondary-bg);
+      border:1px solid var(--border-col);
       border-radius:16px;
       padding:16px;
-      box-shadow:0 14px 28px rgba(0,0,0,0.16);
+      box-shadow:0 4px 8px rgba(0,0,0,0.3);
     }
     .serverbar .sbtn{
       display:inline-flex;
       align-items:center;
       justify-content:center;
-      gap:6px;
       min-width:120px;
       border-radius:12px;
       padding:12px 18px;
@@ -195,15 +151,11 @@
       background: linear-gradient(135deg, var(--accent) 0%, var(--accent-hover) 100%);
       transition: background 0.3s ease, transform 0.1s ease;
       font-weight:500;
-      border:1px solid rgba(255,255,255,0.05);
-      box-shadow:0 8px 20px rgba(99,102,241,0.35);
     }
     .serverbar .sbtn:hover{
       background: linear-gradient(135deg, var(--accent-hover) 0%, var(--accent) 100%);
       transform: translateY(-2px);
     }
-
-    /* loading overlay */
     .loading{
       position:fixed;
       inset:0;
@@ -211,15 +163,12 @@
       flex-direction:column;
       align-items:center;
       justify-content:center;
-      background:rgba(3,6,13,0.8);
+      background:rgba(5,12,23,0.8);
       backdrop-filter:saturate(120%) blur(4px);
       z-index:50;
       transition:opacity .25s ease;
     }
-    .loading.hidden{
-      opacity:0;
-      pointer-events:none;
-    }
+    .loading.hidden{ opacity:0; pointer-events:none; }
     .spinner{
       position:relative;
       width:74px;
@@ -248,58 +197,27 @@
       color: var(--muted-col);
       letter-spacing:.02em;
     }
-    @keyframes spin{
-      to{ transform:rotate(360deg); }
-    }
-    @keyframes pulse{
-      0%,100%{ transform:translate(-50%,-50%) scale(.85); opacity:.85; }
-      50%{ transform:translate(-50%,-50%) scale(1.1); opacity:1; }
-    }
-
-    /* responsive */
-    @media(max-width:720px){
-      .headerbar{
-        grid-template-columns:1fr;
-      }
-      .meta{
-        grid-template-columns:repeat(2,minmax(0,1fr));
-      }
-      #leagueBadge{
-        justify-self:flex-start;
-      }
-    }
-    @media(max-width:520px){
-      .teams{
-        grid-template-columns:1fr;
-      }
-      .meta{
-        grid-template-columns:1fr;
-      }
-      .serverbar{
-        justify-content:flex-start;
-      }
-    }
-
-    /* tiny btn */
+    @keyframes spin{ to{ transform:rotate(360deg) } }
+    @keyframes pulse{ 0%,100%{ transform:translate(-50%,-50%) scale(.85); opacity:.85 } 50%{ transform:translate(-50%,-50%) scale(1.1); opacity:1 } }
+    @media(max-width:600px){ #leagueBadge{ display:none; } }
     .btn{
       display:inline-block;
-      padding:7px 12px;
-      border:1px solid rgba(148,163,184,0.4);
+      padding:8px 14px;
+      border:1px solid var(--accent);
+      background: transparent;
+      color: var(--accent);
       border-radius:8px;
-      background:rgba(15,23,42,0.4);
-      color: var(--text-col);
       text-decoration:none;
       font-weight:500;
-      transition:background 0.2s ease;
+      transition: background 0.25s ease, color 0.25s ease;
     }
     .btn:hover{
-      background:rgba(99,102,241,0.15);
+      background: var(--accent);
+      color:#ffffff;
     }
-
     header.header{
-      background: rgba(15,23,42,0.6);
-      border-bottom:1px solid rgba(148,163,184,0.12);
-      backdrop-filter: blur(6px);
+      background: var(--secondary-bg);
+      border-bottom:1px solid var(--border-col);
     }
     header .bar{
       max-width:980px;
@@ -307,7 +225,6 @@
       padding: var(--pad);
       display:flex;
       align-items:center;
-      gap:10px;
     }
   </style>
 </head>
@@ -321,10 +238,7 @@
 
 <main class="wrap">
   <div id="loadingOverlay" class="loading" aria-live="polite" aria-busy="true">
-    <div class="spinner">
-      <div class="ring"></div>
-      <div class="dot"></div>
-    </div>
+    <div class="spinner"><div class="ring"></div><div class="dot"></div></div>
     <div class="loadingText">Loading match…</div>
   </div>
 
@@ -335,42 +249,24 @@
   </div>
 
   <div class="teams">
-    <div class="side home">
-      <img id="homeLogo" alt="" width="64" height="64" loading="lazy"/>
-      <span class="teamName" id="homeName"></span>
-    </div>
-    <div class="h1" id="versus">
-      VS
-    </div>
-    <div class="side away">
-      <img id="awayLogo" alt="" width="64" height="64" loading="lazy"/>
-      <span class="teamName" id="awayName"></span>
-    </div>
+    <div class="side home"><img id="homeLogo" alt="" width="64" height="64" loading="lazy"/><span class="teamName" id="homeName"></span></div>
+    <div class="h1" id="versus">VS</div>
+    <div class="side away"><img id="awayLogo" alt="" width="64" height="64" loading="lazy"/><span class="teamName" id="awayName"></span></div>
   </div>
   <div class="muted statusBig" id="statusLine" style="text-align:center"></div>
 
   <div class="meta">
-    <div>
-      <span class="muted small">Kickoff</span>
-      <div id="kickoff">-</div>
-    </div>
-    <div>
-      <span class="muted small">Competition</span>
-      <div id="league">-</div>
-    </div>
-    <div>
-      <span class="muted small">Status</span>
-      <div id="state">-</div>
-    </div>
+    <div><span class="muted small">Kickoff</span><div id="kickoff">-</div></div>
+    <div><span class="muted small">Competition</span><div id="league">-</div></div>
+    <div><span class="muted small">Status</span><div id="state">-</div></div>
   </div>
 
   <div id="serverBar" class="serverbar"></div>
 </main>
 
 <script>
-  // ======== original config ========
   const API_KEY = 'kix-7d29f2d9ef3c4';
-  const API_BASE = './api'; // left here, but fixtures come from fotbal.site now
+  const API_BASE = './api';
 
   function apiFetch(url, init = {}) {
     const u = new URL(url, location.href);
@@ -383,10 +279,9 @@
     return fetch(u.toString(), Object.assign({ credentials: 'include' }, init, { headers }));
   }
 
-  // ===== helpers (kept from your file) =====
   let __loadFailTimer = null;
   const $ = id => document.getElementById(id);
-  function hideLoading(){ try{ $('loadingOverlay').classList.add('hidden'); }catch(e){} if(__loadFailTimer){ clearTimeout(__loadFailTimer); __loadFailTimer = null; } }
+  function hideLoading(){ try{ $('loadingOverlay').classList.add('hidden'); }catch{} if(__loadFailTimer){clearTimeout(__loadFailTimer);__loadFailTimer=null;} }
   function qs(name){ return new URLSearchParams(location.search).get(name) || ''; }
   function slug(s){ return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,''); }
   function capWords(s){ return String(s||'').split(/[-\s]+/).map(w => w? w[0].toUpperCase()+w.slice(1):'').join(' '); }
@@ -396,29 +291,16 @@
     return dt.toISOString().slice(0,10);
   }
 
-  /**
-   * (unchanged) map status strings into a human readable value
-   */
   function formatStatus(status){
     const raw = String(status || '').toUpperCase();
-
-    // Live patterns
     const livePatterns = ['IN_PLAY','LIVE','PLAYING','1ST HALF','FIRST HALF','2ND HALF','SECOND HALF'];
     for (const p of livePatterns){ if (raw.includes(p)) return 'Live'; }
-
-    // Half-time patterns
     const halfPatterns = ['HALF-TIME','HALFTIME','HT','HALF TIME','PAUSED'];
     for (const p of halfPatterns){ if (raw.includes(p)) return 'Half Time'; }
-
-    // Finished patterns
     const finPatterns = ['FINISHED','FULL-TIME','FT','FINAL','ENDED'];
     for (const p of finPatterns){ if (raw.includes(p)) return 'Finished'; }
-
-    // Scheduled / not started patterns
     const schedPatterns = ['SCHEDULED','NOT_STARTED','NS'];
     for (const p of schedPatterns){ if (raw.includes(p)) return 'Scheduled'; }
-
-    // fallback
     return status || '';
   }
 
@@ -434,7 +316,6 @@
     renderServerButtonsFromSlug(sl);
   }
 
-  // prefill from slug in URL (you had this)
   (function prime(){
     const id = qs('id');
     if (id && id.includes('@')){
@@ -448,10 +329,7 @@
     }
   })();
 
-  // ===== CHANGED: this used to call `${API_BASE}/fixtures?...`
-  // now it calls your PHP: https://fotbal.site/fixtures.php?date=YYYY-MM-DD
   async function fixturesFor(dateStr){
-    // CHANGED: fetch from fotbal.site instead of local API
     const url = `https://fotbal.site/fixtures.php?date=${encodeURIComponent(dateStr)}`;
     let r;
     try {
@@ -467,7 +345,6 @@
       return [];
     }
     if (!Array.isArray(list)) return [];
-    // normalize each item so the rest of the page (applyFixture, matchSlug) keeps working
     return list.map(x => {
       const homeName = (x.home && x.home.name) || x.home_name || x.home || x.team_home || x.localteam || '';
       const awayName = (x.away && x.away.name) || x.away_name || x.away || x.team_away || x.visitorteam || '';
@@ -514,24 +391,19 @@
     const homeLogo = fx.home?.logo || '';
     const awayLogo = fx.away?.logo || '';
     const league   = fx.league?.name || '';
-    // raw status string provided by the API
     const statusRaw = fx.status || 'SCHEDULED';
     const kickoff  = fx.start_utc || '';
-
     $('homeName').textContent = homeName;
     $('awayName').textContent = awayName;
     $('homeLogo').src = homeLogo || '/logo.svg';
     $('awayLogo').src = awayLogo || '/logo.svg';
-    $('leagueBadge').textContent = league || ''; $('league').textContent = league || '-';
-    // derive a human friendly status from the API value
+    $('leagueBadge').textContent = league || '';
+    $('league').textContent = league || '-';
     const friendlyStatus = formatStatus(statusRaw);
     $('state').textContent = friendlyStatus || '-';
     $('statusLine').textContent = friendlyStatus || '';
     $('kickoff').textContent = kickoff ? new Date(kickoff).toLocaleString() : '-';
-
-    // show server buttons based on this match
     renderServerButtonsFromFixture(fx);
-
     hideLoading();
   }
 
@@ -543,7 +415,6 @@
     if (!id){ $('statusLine').textContent='Missing match id'; hideLoading(); return; }
 
     async function serverResolve(){
-      // we keep your original attempt to hit your local API, in case you still have it
       try{
         let r = await apiFetch(`${API_BASE}/fixture/${encodeURIComponent(id)}`);
         if (!r.ok) r = await apiFetch(`${API_BASE}/fixture?id=${encodeURIComponent(id)}`);
@@ -571,14 +442,8 @@
 
     const [s,c] = await Promise.allSettled([serverResolve(), clientResolve()]);
     const fx = (s.status==='fulfilled' && s.value) || (c.status==='fulfilled' && c.value) || null;
-    if (fx){
-      applyFixture(fx);
-    } else {
-      $('statusLine').textContent='Could not load match data.';
-      hideLoading();
-    }
+    if (fx){ applyFixture(fx); } else { $('statusLine').textContent='Could not load match data.'; hideLoading(); }
   }
   load();
-</script>
-</body>
+</script></body>
 </html>
